# NGOTA

./: Cargo.toml  README.md
config/: multi-config.yaml  single-config.yaml
data/: file1.csv  file1_mask.csv  file2.csv  file2_mask.csv
src/: main.rs
