[package]
name = "MaskingCSV"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_xorshift = "0.3.0"
rand = "0.8.5"
csv = "1.3.0"
serde_yaml = "0.9.29"
serde = {version = "1.0.193", features = ["derive"]}
clap = {version = "4.4.11", features = ["derive"]}
